--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -649,14 +649,31 @@ async function loadTasksForDate(selectedDate) {
         });
 
         taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-            if (confirm(`Are you sure you want to delete "${task.title}"?`)) {
-                await deleteTaskFromBackend(task.title, task.date);
-                taskDiv.remove();
-                if (taskList.children.length === 0) {
-                    taskList.innerHTML = "<p>No tasks for this day.</p>";
-                }
+    if (confirm(`Are you sure you want to delete "${task.title}"?`)) {
+        // Show loading indicator
+        const loadingDiv = document.createElement("div");
+        loadingDiv.textContent = "Deleting task...";
+        loadingDiv.style.position = "fixed";
+        loadingDiv.style.top = "50%";
+        loadingDiv.style.left = "50%";
+        loadingDiv.style.transform = "translate(-50%, -50%)";
+        loadingDiv.style.background = "rgba(0, 0, 0, 0.8)";
+        loadingDiv.style.color = "white";
+        loadingDiv.style.padding = "20px";
+        loadingDiv.style.borderRadius = "10px";
+        document.body.appendChild(loadingDiv);
+
+        try {
+            await deleteTaskFromBackend(task.title, task.date);
+            taskDiv.remove();
+            if (taskList.children.length === 0) {
+                taskList.innerHTML = "<p>No tasks for this day.</p>";
             }
-        });
+        } finally {
+            loadingDiv.remove(); // Remove the loading indicator
+        }
+    }
+});
 
         taskList.appendChild(taskDiv);
     });
@@ -673,6 +690,9 @@ async function deleteTaskFromBackend(title, date) {
     // Extract the start date from the range (e.g., "2025-04-09 to 2025-04-09" -> "2025-04-09")
     const startDate = date.split(" to ")[0];
 
+    const controller = new AbortController();
+    const timeoutId = setTimeout(() => controller.abort(), 60000); // 60 seconds timeout
+
     try {
         const response = await fetch(
             `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
@@ -680,9 +700,12 @@ async function deleteTaskFromBackend(title, date) {
                 method: "DELETE",
                 headers: {
                     "Content-Type": "application/json"
-                }
+                },
+                signal: controller.signal // Add the AbortController signal
             }
         );
+
+        clearTimeout(timeoutId); // Clear the timeout if the request succeeds
 
         if (!response.ok) {
             const errorData = await response.json(); // Get the error message from the backend
@@ -691,10 +714,13 @@ async function deleteTaskFromBackend(title, date) {
 
         console.log("Task deleted successfully");
     } catch (error) {
+        clearTimeout(timeoutId); // Clear the timeout on error
         console.error("Error deleting task:", error);
         alert(`Failed to delete task: ${error.message}`);
     }
 }
+
+
 
 async function saveTaskToBackend(task) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
