--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -681,42 +681,53 @@ async function loadTasksForDate(selectedDate) {
 
 async function deleteTaskFromBackend(title, date) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
-    console.log("Deleting task with:", { adminEmail, title, date }); // For debugging
+    console.log("Deleting task with:", { adminEmail, title, date });
     if (!adminEmail) {
         alert("No admin email found.");
         return;
     }
 
-    // Extract the start date from the range (e.g., "2025-04-09 to 2025-04-09" -> "2025-04-09")
     const startDate = date.split(" to ")[0];
 
-    const controller = new AbortController();
-    const timeoutId = setTimeout(() => controller.abort(), 60000); // 60 seconds timeout
+    const maxRetries = 2;
+    let attempt = 0;
 
-    try {
-        const response = await fetch(
-            `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
-            {
-                method: "DELETE",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                signal: controller.signal // Add the AbortController signal
+    while (attempt <= maxRetries) {
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 90000); // 90 seconds timeout
+
+        try {
+            const response = await fetch(
+                `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
+                {
+                    method: "DELETE",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    signal: controller.signal
+                }
+            );
+
+            clearTimeout(timeoutId);
+
+            if (!response.ok) {
+                const errorData = await response.json();
+                throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
             }
-        );
 
-        clearTimeout(timeoutId); // Clear the timeout if the request succeeds
-
-        if (!response.ok) {
-            const errorData = await response.json(); // Get the error message from the backend
-            throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
+            console.log("Task deleted successfully");
+            return;
+        } catch (error) {
+            clearTimeout(timeoutId);
+            attempt++;
+            if (attempt > maxRetries) {
+                console.error("Error deleting task after retries:", error);
+                alert(`Failed to delete task: ${error.message}`);
+                return;
+            }
+            console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
+            await new Promise(resolve => setTimeout(resolve, 2000));
         }
-
-        console.log("Task deleted successfully");
-    } catch (error) {
-        clearTimeout(timeoutId); // Clear the timeout on error
-        console.error("Error deleting task:", error);
-        alert(`Failed to delete task: ${error.message}`);
     }
 }
 
@@ -764,14 +775,9 @@ async function showTaskDetails(task) {
     if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
 
-    const remainingTurns = requiredTimes - completedUsers.length;
-
-    let nextTurn = [];
-    let index = currentIndex;
-    for (let i = 0; i < remainingTurns - 1; i++) {
-        index = (index + 1) % userOrder.length;
-        nextTurn.push(userOrder[index]);
-    }
+    // Calculate the next user in the turn order, regardless of remaining turns
+    const nextIndex = (currentIndex + 1) % userOrder.length;
+    const nextUser = userOrder[nextIndex];
 
     let taskDetails = "";
     if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
@@ -794,7 +800,7 @@ async function showTaskDetails(task) {
     if (task.reward && task.reward !== "0") taskDetails += `<strong>Reward:</strong> ${task.reward} 🍯<br>`;
 
     taskDetails += `<strong>Current Turn:</strong> ${currentUser}<br>`;
-    taskDetails += `<strong>Next:</strong> ${nextTurn.length > 0 ? nextTurn.join(" → ") : "-"}<br>`;
+    taskDetails += `<strong>Next:</strong> ${nextUser}<br>`;
 
     if (completedUsers.length > 0) {
         taskDetails += `
@@ -846,6 +852,24 @@ async function showTaskDetails(task) {
         });
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 async function finishTask(userName, task, button, selectedDate) {
     const today = selectedDate;
